--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon  -r dotenv/config --experimental-json-modules src/index.js"
+    "start": "node -r dotenv/config --experimental-json-modules src/index.js",
+    "dev": "nodemon  -r dotenv/config --experimental-json-modules src/index.js",
+    "test": "mocha"
   },
   "github": "https://github.com/Pika003/e-Learning-Platform.git",
   "author": "Parag, Satyajit, Gopi, Aditya",
@@ -27,6 +29,9 @@
     "razorpay": "^2.9.3"
   },
   "devDependencies": {
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
+    "mocha": "^11.7.5",
     "nodemon": "^3.1.10"
   }
 }
